<resources>
    <string name="app_name">My Recipes</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="home_fragment_label">Home Fragment</string>
    <string name="add_recipe_fragment_label">Add Recipe Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg:</string>
    <string name="cd_search">Buscar</string>
    <string name="hint_recipe_name">Recipe name</string>
    <string name="category_dropdown">Category</string>
    <string name="hint_ingredient">Ingredient</string>
    <string name="hint_quantity">Qtd</string>
    <string name="hint_unit_measurement">Unit</string>
</resources>