<?xml version="1.0" encoding="utf-8"?>

<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="com.br.myrecipes.ui.addrecipes.AddRecipeFragment">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/text_recipe_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:hint="@string/hint_recipe_name"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/text_input_category"
            style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.ExposedDropdownMenu"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:hint="@string/category_dropdown"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/text_recipe_name">

            <AutoCompleteTextView
                android:id="@+id/menu_autocomplete"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/text_recipe_ingredient"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:hint="@string/hint_ingredient"
            app:layout_constraintEnd_toStartOf="@id/text_input_unit_measurement"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/text_input_category">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/text_input_unit_measurement"
            style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.ExposedDropdownMenu"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:hint="@string/hint_unit_measurement"
            app:layout_constraintBottom_toBottomOf="@+id/text_recipe_ingredient"
            app:layout_constraintEnd_toStartOf="@id/text_ingredient_quantity"
            app:layout_constraintStart_toEndOf="@id/text_recipe_ingredient"
            app:layout_constraintTop_toTopOf="@id/text_recipe_ingredient">

            <AutoCompleteTextView
                android:id="@+id/menu_measurement"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/text_ingredient_quantity"
            android:layout_width="70dp"
            android:layout_height="wrap_content"
            android:hint="@string/hint_quantity"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toStartOf="@id/button_add_ingredient"
            app:layout_constraintBottom_toBottomOf="@id/text_input_unit_measurement"
            app:layout_constraintStart_toEndOf="@id/text_input_unit_measurement"
            app:layout_constraintTop_toTopOf="@id/text_input_unit_measurement">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:text="1000"
                android:inputType="number" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_add_ingredient"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Add"
            android:layout_marginEnd="8dp"
            app:layout_constraintBottom_toBottomOf="@id/text_ingredient_quantity"
            app:layout_constraintStart_toEndOf="@id/text_ingredient_quantity"
            app:layout_constraintTop_toTopOf="@id/text_ingredient_quantity"
            app:layout_constraintEnd_toEndOf="parent"/>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycle_ingredients"
            android:layout_width="0dp"
            android:layout_height="200dp"
            android:layout_margin="8dp"
            tools:itemCount="6"
            tools:listitem="@layout/item_ingredient"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@id/text_cooktime"
            app:layout_constraintTop_toBottomOf="@id/text_recipe_ingredient" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/text_cooktime"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:hint="Cooktime"
            app:layout_constraintEnd_toStartOf="@id/text_serves"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/recycle_ingredients">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/text_serves"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:hint="Serves"
            app:layout_constraintStart_toEndOf="@id/text_cooktime"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/recycle_ingredients">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/text_directions"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:hint="Directions"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/text_serves">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textMultiLine"
                android:minLines="3"
                android:gravity="top|start"
                android:scrollbarStyle="insideInset"
                android:scrollbars="vertical" />

        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/text_utensils"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:hint="Utensils"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/text_directions">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number"/>

        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.button.MaterialButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Save"
            android:layout_marginTop="25dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/text_utensils" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.core.widget.NestedScrollView>